[package]
name = "rwcln"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mutils = { git = "https://github.com/wegmarken2006/mutils" }
wasm-bindgen = "0.2.100"
#web-sys = "0.3.70"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_yml = "0.0.12"
serde-wasm-bindgen = "0.6.5"

[dependencies.web-sys]
version = "0.3.70"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'console',
    'HtmlInputElement',
    'HtmlSelectElement',
    'Location',
    'WebSocket',
    'MessageEvent',
    'BinaryType',
]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
